objects/Remote_Site__c/Remote_Site__c.object-meta.xml
<CustomObject>
    <label>Remote Site</label>
    <nameField>
        <label>Remote Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remote Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>