objects/Remote_Site__c/fields/Customer_C_Tag_VLAN_ID_Numbers_Site_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_C_Tag_VLAN_ID_Numbers_Site_1__c</fullName>
    <label>Customer C-Tag (VLAN ID) Numbers -Site 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>