objects/Remote_Site__c/fields/Customer_Frames_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Frames_Treatment__c</fullName>
    <label>Customer Frames Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass All Customer Frames, Tagged &amp; Untagged (Default)</fullName>
            </value>
            <value>
                <fullName>Pass Only Frames with Specific VLAN Tags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>