objects/Remote_Site__c/fields/Customer_Provided_Power__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_Power__c</fullName>
    <label>Customer-Provided Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>24VDC</fullName>
            </value>
            <value>
                <fullName>48VDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>