objects/Remote_Site__c/fields/EVC_Mileage_Site_1__c.field-meta.xml
<CustomField>
    <fullName>EVC_Mileage_Site_1__c</fullName>
    <label>EVC Mileage - Site 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 24 Miles</fullName>
            </value>
            <value>
                <fullName>25 - 99 Miles</fullName>
            </value>
            <value>
                <fullName>100 - 249 Miles</fullName>
            </value>
            <value>
                <fullName>245 - 500 Miles</fullName>
            </value>
            <value>
                <fullName>501 - 999 Miles</fullName>
            </value>
            <value>
                <fullName>1000 - 2499 Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>