objects/Remote_Site__c/fields/Frames_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Frames_Handoff__c</fullName>
    <inlineHelpText>Ingress (Customer to Integra) &amp; Egress (Integra to Customer)</inlineHelpText>
    <label>Frames Handoff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Tagged (C-Tag Only) DEFAULT</fullName>
                <default>true</default>
                <label>Single Tagged (C-Tag Only) DEFAULT</label>
            </value>
            <value>
                <fullName>Double-Tagged ICB ONLY (Customer C-Tag &amp; INTEGRA S-Tag)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>