objects/Remote_Site__c/fields/Interface_Specification__c.field-meta.xml
<CustomField>
    <fullName>Interface_Specification__c</fullName>
    <label>Interface Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10Base-T</fullName>
            </value>
            <value>
                <fullName>100Base-T</fullName>
            </value>
            <value>
                <fullName>1000Base-T</fullName>
            </value>
            <value>
                <fullName>100Base-FX</fullName>
            </value>
            <value>
                <fullName>1000Base-SX</fullName>
            </value>
            <value>
                <fullName>1000Base-LX</fullName>
            </value>
            <value>
                <fullName>10GBase-LR</fullName>
            </value>
            <value>
                <fullName>10GBase-SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>