objects/Remote_Site__c/fields/NID_Demarc_Location__c.field-meta.xml
<CustomField>
    <fullName>NID_Demarc_Location__c</fullName>
    <label>NID / Demarc Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>