objects/Remote_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote Site 2</fullName>
            </value>
            <value>
                <fullName>Remote Site 3</fullName>
            </value>
            <value>
                <fullName>Remote Site 4</fullName>
            </value>
            <value>
                <fullName>Remote Site 5</fullName>
            </value>
            <value>
                <fullName>Remote Site 6</fullName>
            </value>
            <value>
                <fullName>Remote Site 7</fullName>
            </value>
            <value>
                <fullName>Remote Site 8</fullName>
            </value>
            <value>
                <fullName>Remote Site 9</fullName>
            </value>
            <value>
                <fullName>Remote Site 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>