objects/Remote_Site__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>CASE( Interface_Specification__c , &quot;10Base-T&quot;, &quot;Electrical&quot;, &quot;100Base-T&quot;, &quot;Electrical&quot;,&quot;1000Base-T&quot;, &quot;Electrical&quot;,&quot;100Base-FX&quot;, &quot;Optical MM&quot;,&quot;1000Base-SX&quot;, &quot;Optical MM&quot;,&quot;1000Base-LX&quot;, &quot;Optical SM&quot;,&quot;10GBase-LR&quot;, &quot;Optical SM ICB&quot;,&quot;10GBase-SR&quot;, &quot;Optical MM&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>